# snake-game

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  Snake.cpp  Utilities.h  build
src/: Page.cpp  Page.h  Snake.cpp  Snake.h  Utilities.h
test/: CMakeLists.txt  Food.cpp  Snake.cpp
